syntax = "proto3";
option java_multiple_files = true;
package org.example.order;

import "product.proto";

message OrderRequest {
  string customerId = 1;
  repeated OrderItem items = 2;
}

message OrderItem {
  string productId = 1;
  int32 quantity = 2;
}

message OrderResponse {
  string orderId = 1;
  string customerId = 2;
  repeated OrderItemDetail items = 3;
  double totalAmount = 4;
  string orderStatus = 5;
  string createdAt = 6;
}

message OrderItemDetail {
  org.example.product.ProductResponse product = 1;
  int32 quantity = 2;
  double subtotal = 3;
}

message OrderDetailsRequest {
  string orderId = 1;
}

service OrderService {
  rpc CreateOrder(OrderRequest) returns (OrderResponse);
  rpc GetOrderDetails(OrderDetailsRequest) returns (OrderResponse);
}